<package>
  <name>bcap</name>
  <version>0.1.0</version>
  <description>
   The bcap library
  </description>
  <maintainer email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</maintainer>
  <license>BSD</license>
  <author email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</author>
  <url type="website">https://github.com/fsuarez6/bcap</url>
  <url type="bugtracker">https://github.com/fsuarez6/bcap/issues</url>
  <url type="repository">https://github.com/fsuarez6/bcap</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>
  
</package>
