<package>
  <name>bcap</name>
  <version>0.0.0</version>
  <description>
   bCAP library as a ROS package
  </description>
  <maintainer email="fsuarez6@gmail.com">Francisco Suarez Ruiz</maintainer>
  <license>BSD-3-Clause</license>
  <author email="fsuarez6@gmail.com">Francisco Suarez Ruiz</author>
  <url type="website">https://github.com/fsuarez6/bcap</url>
  <url type="bugtracker">https://github.com/fsuarez6/bcap/issues</url>
  <url type="repository">https://github.com/fsuarez6/bcap</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>
  
</package>
